# selfhealgke

./: .env.example  .gitignore  Makefile  README.md  demo.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: codeql.yml
agents/: README.md  __init__.py  approval_a2a_service.py  approval_agent.py  approval_integration.py  audit_a2a_service.py  audit_agent.py  orchestrator_a2a_service.py  orchestrator_agent.py  rca_a2a_service.py  rca_agent.py  remediation_a2a_service.py  remediation_agent.py
docs/: infrastructure-deployment.md  online-boutique-deployment.md
extensions/: testforge-vscode-extension-0.0.1.vsix
kubernetes/: README.md
kubernetes/agents/: .gitkeep
kubernetes/mcp-servers/: .gitkeep
mcp-servers/: README.md  gcp_observability_server.py  mcp.json  registered_tools.json
mcp-servers/scripts/: discover_tools.py
monitoring/: gke_monitor.py
playwright-tests/: README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright-tests/configs/: online-boutique.config.ts
playwright-tests/docs/: test-suite-guide.md
playwright-tests/scripts/: run-synthetic-tests.sh
playwright-tests/src/: global-setup.ts  global-teardown.ts
playwright-tests/src/reporters/: custom-failure-reporter.ts
playwright-tests/src/utils/: test-helpers.ts  trace-context-extractor.ts  webhook-client.ts
playwright-tests/tests/: .gitkeep
playwright-tests/tests/critical-path/: checkout-flow.spec.d.ts  checkout-flow.spec.d.ts.map  checkout-flow.spec.js  checkout-flow.spec.js.map  checkout-flow.spec.ts  complete-user-journey.spec.ts
playwright-tests/tests/online-boutique/: checkout-flow.spec.ts  homepage.spec.d.ts  homepage.spec.d.ts.map  homepage.spec.js  homepage.spec.js.map  homepage.spec.ts  product-browsing.spec.ts  shopping-cart.spec.ts
terraform/: Makefile  README.md  main.tf  outputs.tf  tfplan-development  variables.tf  versions.tf
terraform/.github/workflows/: terraform-apply.yml  terraform-plan.yml
terraform/environments/development/: terraform.tfvars
terraform/environments/production/: terraform.tfvars
terraform/environments/staging/: terraform.tfvars
terraform/modules/: .gitkeep
terraform/modules/gke-cluster/: main.tf  node-pool.tf  outputs.tf  service-accounts.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
terraform/policies/: README.md  enforce-private-gke-clusters.sentinel  mandatory-security-labels.sentinel  restrict-machine-types.sentinel  sentinel.hcl
terraform/policies/test/enforce-private-gke-clusters/: fail.hcl  mock-tfplan-fail.sentinel  mock-tfplan-pass.sentinel  pass.hcl
terraform/scripts/: setup-state-bucket.sh  validate-policies.sh
testing/: failure_injector.py
web-dashboard/: README.md  dashboard.js  index.html  requirements.txt  server.py  start-dashboard.sh  styles.css
